# visual-engine

./: .gitignore  CMakeLists.txt  README.md
source/: main.cxx
source/core/: common.hxx  cvar.cxx  cvar.h  cvar.hxx  visual_def.hxx  visual_structs.hxx
source/editor/: visual_editor.hxx
